<resources>
    <string name="app_name">Transfer Market</string>
    <string name="title_activity_tabbed_player">TabbedPlayerActivity</string>
    <string name="tab_text_1">Image</string>
    <string name="tab_text_2">Info</string>
    <string name="welcome_header">Welcome to</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="the_application_logo">The Application Logo</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="position">Position</string>
    <string name="age">Age</string>
    <string name="club">Club</string>
    <string name="nation">Nation</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="back">Back</string>
    <string name="lewa_name">Robert Lewandowski</string>
    <string name="lewa_value">€45.00m</string>
    <string name="poland">Poland</string>
    <string name="barca">FC Barcelona</string>
    <string name="lewa_age">Age:34</string>
    <string name="lewa_info">Robert Lewandowski is a Polish professional footballer who plays as a striker for La Liga club Barcelona and captains the Poland national team. Recognized for his positioning, technique and finishing, Lewandowski is considered one of the best strikers of all time, as well as one of the most successful players in Bundesliga history. He has scored over 600 senior career goals for club and country.\n\n
        After being the top scorer in the third and second tiers of Polish football with Znicz Pruszków, Lewandowski moved to top-flight Lech Poznań, helping the team win the 2009–10 Ekstraklasa. In 2010, he transferred to Borussia Dortmund, where he won honors including two consecutive Bundesliga titles and the league\'s top goalscorer award. In 2013, he also featured with Dortmund in the 2013 UEFA Champions League Final. Prior to the start of the 2014–15 season, Lewandowski agreed to join Dortmund\'s domestic rivals, Bayern Munich, on a free transfer. In Munich, he won the Bundesliga title in every one of his eight seasons. Lewandowski was integral in Bayern\'s UEFA Champions League win in 2019–20 as part of a treble. He is one of only two players, alongside Johan Cruyff, to achieve the European treble while being the highest goalscorer in all three competitions, and the first to do it as the sole top scorer.
        \n\n In 2020, Lewandowski won the Best FIFA Men"'"s Player Award (retained in 2021) and the UEFA Men"'"s Player of the Year Award. On 19 July 2022, Lewandowski signed for La Liga club Barcelona on a four-year contract for a fee of €45 million, potentially rising to €50 million with add-ons.</string>
    <string name="salah_name">Mohamed Salah</string>
    <string name="salah_value">€90.00m</string>
    <string name="rw">Right Winger</string>
    <string name="egypt">Egypt</string>
    <string name="salah_info">\"Mohamed Salah Hamed Mahrous Ghaly\"(born 15 June 1992) is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team. Considered one of the best players in the world, he is known for his finishing, dribbling, and speed.
     \n\nSalah started his senior career in 2010 playing for Al Mokawloon, departing in 2012 to join Basel, where he won two Swiss Super League titles. In 2014, Salah joined Chelsea for a reported fee of £11 million, but limited gametime led to successive loans to Fiorentina and Roma, who later signed him permanently for €15 million. In 2017, Salah was the subject of a then-club record association football transfer when he signed for Liverpool for £36.9 million, becoming the most expensive Egyptian player of all time.\n\n
        Salah went on to be an integral player in the club"'"s Champions League and Premier League title successes the following two seasons, and has since also won the Community Shield, the FA Cup and the League Cup. Salah has achieved numerous individual accolades, including two PFA Players"'" Player of the Year awards, three Premier League Golden Boots, the Premier League Player of the Season, the Premier League Playmaker of the Season, and finished third for the Best FIFA Men"'"s Player in 2018 and 2021. He received the 2018 FIFA Puskás Award for his winning strike in the first Merseyside derby of the 2017–18 season. "\</string>
    <string name="liverpool">Liverpool</string>
    <string name="salah_age">Age:30</string>
    <string name="messi_info">Lionel Andrés Messi, also known as Leo Messi, is an Argentine professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and captains the Argentina national team. Often considered the best player in the world and widely regarded as one of the greatest players of all time. Messi has won a record seven Ballon d\'Or awards,a record six European Golden Shoes, and in 2020 was named to the Ballon d\'Or Dream Team.\n\nUntil leaving the club in 2021, he had spent his entire professional career with Barcelona, where he won a club-record 35 trophies
    , including ten La Liga titles, seven Copa del Rey titles and four UEFA Champions Leagues. A prolific goalscorer and creative playmaker, Messi holds the records for most goals in La Liga (474), a La Liga and European league season (50), most hat-tricks in La Liga (36) and the UEFA Champions League (8), and most assists in La Liga (192), a La Liga season (21) and the Copa América (17). He also holds the record for most international goals by a South American male (90). Messi has scored over 780 senior career goals for club and country, and has the most goals by a player for a single club. </string>
    <string name="messi_name">Lionel Messi</string>
    <string name="messi_value">€50.00m</string>
    <string name="argentina">Argentina</string>
    <string name="psg">PSG</string>
    <string name="messi_age">Age:35</string>
    <string name="cf">Centre-Forward</string>
    <string name="ronaldo_value">€20.00m</string>
    <string name="cr7_name">Cristiano Ronaldo</string>
    <string name="portugal">Portugal</string>
    <string name="man_united">Man United</string>
    <string name="cr7_age">Age:37</string>
    <string name="cr7_info">\"Cristiano Ronaldo dos Santos Aveiro (born 5 February 1985) is a Portuguese professional footballer who plays as a forward for Premier League club Manchester United and captains the Portugal national team. Often considered the best player in the world and widely regarded as one of the greatest players of all time, Ronaldo has won five Ballon d\'Or awards and four European Golden Shoes, the most by a European player. He has won 32 trophies in his career, including seven league titles, five UEFA Champions Leagues, one UEFA European Championship and one UEFA Nations League. Ronaldo holds the records for most appearances (181), most goals (140) and assists (42) in the Champions League, most goals in the European Championship (14), most international goals by a male player (115), and most international appearances by a European male (184). He is one of the few players to have made over 1,100 professional career appearances, and has scored over 800 official senior career goals for club and country. \n\n
        Ronaldo began his senior career with Sporting CP, before signing with Manchester United in 2003, aged 18, winning the FA Cup in his first season. He would also go on to win three consecutive Premier League titles, the Champions League and the FIFA Club World Cup; at age 23, he won his first Ballon d\'Or. Ronaldo was the subject of the then-most expensive association football transfer when he signed for Real Madrid in 2009 in a transfer worth €94 million (£80 million), where he won 15 trophies, including two La Liga titles, two Copa del Rey, and four Champions Leagues, and became the club\'s all-time top goalscorer. He won back-to-back Ballons d\'Or in 2013 and 2014, and again in 2016 and 2017, and was runner-up three times behind Lionel Messi, his perceived career rival. In 2018, he signed for Juventus in a transfer worth an initial €100 million (£88 million), the most expensive transfer for an Italian club and for a player over 30 years old. He won two Serie A titles, two Supercoppe Italiana, and a Coppa Italia, before returning to Manchester United in 2021.\n\n
        Ronaldo made his international debut for Portugal in 2003 at the age of 18 and has since earned over 190 caps, making him Portugal\'s most-capped player. With more than 100 goals at international level, he is also the nation\'s all-time top goalscorer. Ronaldo has played in and scored at 11 major tournaments; he scored his first international goal at Euro 2004, where he helped Portugal reach the final. He assumed captaincy of the national team in July 2008. In 2015, Ronaldo was named the best Portuguese player of all time by the Portuguese Football Federation. The following year, he led Portugal to their first major tournament title at Euro 2016, and received the Silver Boot as the second-highest goalscorer of the tournament. He also led them to victory in the inaugural UEFA Nations League in 2019, and later received the Golden Boot as top scorer of Euro 2020. \"</string>
    <string name="rma">Real Madrid</string>
    <string name="france">France</string>
    <string name="benz_value">€30.00m</string>
    <string name="benz_name">Karim Benzema</string>
    <string name="benz_info">Karim Mostafa Benzema is a French professional footballer who plays as a striker for Spanish club Real Madrid and the France national team. A creative forward known for his playmaking and finishing, Benzema is regarded as one of the best strikers in the world. He ranks as Real Madrid\'s all-time second-highest goalscorer and all-time top assist provider.\n\n
    Born in Lyon to Algerian parents, Benzema began his senior career with hometown club Olympique Lyonnais in 2005, contributing sporadically to three Ligue 1 title wins. In 2008, he was named the league\'s Player of the Year and in the Team of the Year having finished as the league\'s top goalscorer and winning his fourth league title and first Coupe de France. In 2009, Benzema was the subject of a then French record football transfer when signed for Real Madrid in a transfer worth €35 million. After struggling to establish himself in his debut season, he eventually achieved a consistent goalscoring rate with the club, and notably went on to be part of a highly rated trio alongside Cristiano Ronaldo and Gareth Bale — dubbed BBC — who were integral to a period
        where Real Madrid won four UEFA Champions League titles from 2014 to 2018.\n\n
    Following Ronaldo\'s departure in 2018, Benzema transitioned from the false 9 position into a sole striker. His prominence in Real Madrid\'s squad significantly increased, with him being named in the La Liga Team of the Season in 2018–19, 2019–20, 2020–21 and 2021–22, awarded the league\'s Best Player in 2019–20 and 2021–22, and also winning the Pichichi Trophy in 2021–22.
    Captaining the team, his notable career-high performances during Real Madrid\'s victory in the 2021–22 Champions League have been hailed as one of the finest individual campaigns in the competition\'s history, in addition to becoming the top scorer and winning the Player of the Season award. Benzema has won 23 trophies with Real Madrid, including four La Liga, two Copa del Rey, and five Champions League titles. </string>
    <string name="kdb_age">Age:31</string>
    <string name="man_city">Man City</string>
    <string name="belgium">Belgium</string>
</resources>