<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/signUpTitle"
        style="@style/SignStyle"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/top_barrier"
        app:layout_constraintEnd_toStartOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/app_logo"
        style="@style/AppLogoStyle"
        android:contentDescription="@string/the_application_logo"
        app:layout_constraintBottom_toTopOf="@id/top_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/signUpTitle"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <EditText
        android:id="@+id/name"
        style="@style/EditTextStyle"
        android:drawableStart="@drawable/ic_name"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_barrier"
        app:layout_constraintVertical_chainStyle="packed">

    </EditText>

    <EditText
        android:id="@+id/mail"
        style="@style/EditTextStyle"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:hint="@string/enter_your_e_mail"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

    </EditText>

    <EditText
        android:id="@+id/password"
        style="@style/EditTextStyle"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirmPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail">

    </EditText>

    <EditText
        android:id="@+id/confirmPass"
        style="@style/EditTextStyle"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

    </EditText>


    <Button
        android:id="@+id/register_btn"
        style="@style/FootballButtonStyle"
        android:layout_marginEnd="15dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/footer_barrier"
        app:layout_constraintEnd_toStartOf="@id/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_barrier">

    </Button>

    <Button
        android:id="@+id/back_btn"
        style="@style/FootballButtonStyle"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@id/footer_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/register_btn"
        app:layout_constraintTop_toBottomOf="@id/buttons_barrier">

    </Button>

    <TextView
        android:id="@+id/footer1"
        style="@style/Footer1Style"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/footer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer_barrier">

    </TextView>

    <TextView
        android:id="@+id/footer2"
        style="@style/Footer2Style"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/footer1"
        app:layout_constraintTop_toBottomOf="@id/footer_barrier"
        android:layout_marginTop="40dp">

    </TextView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="signUpTitle,app_logo"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/buttons_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="back_btn,register_btn"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="footer1,footer2"
        tools:layout_editor_absoluteY="731dp" />

</androidx.constraintlayout.widget.ConstraintLayout>