<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/signInTitle"
        style="@style/SignStyle"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/top_barrier"
        app:layout_constraintEnd_toStartOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/app_logo"
        style="@style/AppLogoStyle"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/top_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/signInTitle"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <EditText
        android:id="@+id/e_mail"
        style="@style/EditTextStyle"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:hint="@string/enter_your_e_mail"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_barrier"
        app:layout_constraintVertical_chainStyle="packed">

    </EditText>

    <EditText
        android:id="@+id/pass"
        style="@style/EditTextStyle"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/buttons_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_mail">

    </EditText>


    <Button
        android:id="@+id/signInBtn"
        style="@style/FootballButtonStyle"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="15dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/footer_barrier"
        app:layout_constraintEnd_toStartOf="@id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_barrier">

    </Button>

    <Button
        android:id="@+id/back"
        style="@style/FootballButtonStyle"
        android:text="@string/back"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@id/footer_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/signInBtn"
        app:layout_constraintTop_toBottomOf="@id/buttons_barrier">

    </Button>


    <TextView
        android:id="@+id/footer1"
        style="@style/Footer1Style"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/footer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/footer_barrier">

    </TextView>

    <TextView
        android:id="@+id/footer2"
        style="@style/Footer2Style"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/footer1"
        app:layout_constraintTop_toBottomOf="@id/footer_barrier">

    </TextView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="signInTitle,app_logo"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="210dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/buttons_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="signInBtn,back"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="731dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="footer2,footer1"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="731dp" />


</androidx.constraintlayout.widget.ConstraintLayout>